Fixed buttons overlapping

--- a/src/app/components/send/send.component.css
+++ b/src/app/components/send/send.component.css
@@ -57,6 +57,7 @@
   padding-bottom: 15px;
 }
 .send-types-frame {
+  width: 100%;
   display: inline-block;
 }
 .send-types-tab {
